--- a/DBAChecksReports/Summary.rdl
+++ b/DBAChecksReports/Summary.rdl
@@ -10,7 +10,7 @@
     </DataSource>
   </DataSources>
   <DataSets>
-    <DataSet Name="DataSet1">
+    <DataSet Name="Summary">
       <Query>
         <DataSourceName>DBAChecksDB</DataSourceName>
         <QueryParameters>
@@ -59,6 +59,10 @@
           <DataField>FileFreeSpaceStatus</DataField>
           <rd:TypeName>System.Int32</rd:TypeName>
         </Field>
+        <Field Name="JobStatus">
+          <DataField>JobStatus</DataField>
+          <rd:TypeName>System.Int32</rd:TypeName>
+        </Field>
       </Fields>
     </DataSet>
     <DataSet Name="Instances">
@@ -70,6 +74,9 @@
           </QueryParameter>
           <QueryParameter Name="@TagMatching">
             <Value>=Parameters!TagMatching.Value</Value>
+          </QueryParameter>
+          <QueryParameter Name="@InstanceName">
+            <Value>=Parameters!InstanceName.Value</Value>
           </QueryParameter>
         </QueryParameters>
       </SharedDataSet>
@@ -155,6 +162,9 @@
                 </TablixColumn>
                 <TablixColumn>
                   <Width>2.05625in</Width>
+                </TablixColumn>
+                <TablixColumn>
+                  <Width>1in</Width>
                 </TablixColumn>
                 <TablixColumn>
                   <Width>1in</Width>
@@ -459,6 +469,46 @@
                             </BottomBorder>
                             <BackgroundColor>#444444</BackgroundColor>
                             <FontFamily />
+                            <PaddingLeft>2pt</PaddingLeft>
+                            <PaddingRight>2pt</PaddingRight>
+                            <PaddingTop>2pt</PaddingTop>
+                            <PaddingBottom>2pt</PaddingBottom>
+                          </Style>
+                        </Textbox>
+                      </CellContents>
+                    </TablixCell>
+                    <TablixCell>
+                      <CellContents>
+                        <Textbox Name="Textbox12">
+                          <CanGrow>true</CanGrow>
+                          <KeepTogether>true</KeepTogether>
+                          <Paragraphs>
+                            <Paragraph>
+                              <TextRuns>
+                                <TextRun>
+                                  <Value>Job Status</Value>
+                                  <Style>
+                                    <FontFamily />
+                                    <FontSize>11pt</FontSize>
+                                    <FontWeight>Bold</FontWeight>
+                                    <Color>White</Color>
+                                  </Style>
+                                </TextRun>
+                              </TextRuns>
+                              <Style>
+                                <TextAlign>Right</TextAlign>
+                              </Style>
+                            </Paragraph>
+                          </Paragraphs>
+                          <rd:DefaultName>Textbox12</rd:DefaultName>
+                          <Style>
+                            <Border>
+                              <Color>LightGrey</Color>
+                            </Border>
+                            <BottomBorder>
+                              <Style>Solid</Style>
+                            </BottomBorder>
+                            <BackgroundColor>#444444</BackgroundColor>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -878,6 +928,59 @@ Fields!DriveStatus.Value=4,"Green")</BackgroundColor>
                     </TablixCell>
                     <TablixCell>
                       <CellContents>
+                        <Textbox Name="Textbox14">
+                          <CanGrow>true</CanGrow>
+                          <KeepTogether>true</KeepTogether>
+                          <Paragraphs>
+                            <Paragraph>
+                              <TextRuns>
+                                <TextRun>
+                                  <Value />
+                                  <Style>
+                                    <FontFamily />
+                                    <Color>#333333</Color>
+                                  </Style>
+                                </TextRun>
+                              </TextRuns>
+                              <Style />
+                            </Paragraph>
+                          </Paragraphs>
+                          <rd:DefaultName>Textbox14</rd:DefaultName>
+                          <ActionInfo>
+                            <Actions>
+                              <Action>
+                                <Drillthrough>
+                                  <ReportName>AgentJobs</ReportName>
+                                  <Parameters>
+                                    <Parameter Name="InstanceIDs">
+                                      <Value>=Fields!InstanceID.Value</Value>
+                                    </Parameter>
+                                    <Parameter Name="FilterLevel">
+                                      <Value>4</Value>
+                                    </Parameter>
+                                  </Parameters>
+                                </Drillthrough>
+                              </Action>
+                            </Actions>
+                          </ActionInfo>
+                          <Style>
+                            <Border>
+                              <Color>LightGrey</Color>
+                              <Style>Solid</Style>
+                            </Border>
+                            <BackgroundColor>=SWITCH(Fields!JobStatus.Value=1,"Red",
+Fields!JobStatus.Value=2,"Yellow",
+Fields!JobStatus.Value=4,"Green")</BackgroundColor>
+                            <PaddingLeft>2pt</PaddingLeft>
+                            <PaddingRight>2pt</PaddingRight>
+                            <PaddingTop>2pt</PaddingTop>
+                            <PaddingBottom>2pt</PaddingBottom>
+                          </Style>
+                        </Textbox>
+                      </CellContents>
+                    </TablixCell>
+                    <TablixCell>
+                      <CellContents>
                         <Textbox Name="Textbox11">
                           <CanGrow>true</CanGrow>
                           <KeepTogether>true</KeepTogether>
@@ -943,6 +1046,7 @@ Fields!FileFreeSpaceStatus.Value=4,"Green")</BackgroundColor>
                 <TablixMember />
                 <TablixMember />
                 <TablixMember />
+                <TablixMember />
               </TablixMembers>
             </TablixColumnHierarchy>
             <TablixRowHierarchy>
@@ -965,7 +1069,7 @@ Fields!FileFreeSpaceStatus.Value=4,"Green")</BackgroundColor>
                 </TablixMember>
               </TablixMembers>
             </TablixRowHierarchy>
-            <DataSetName>DataSet1</DataSetName>
+            <DataSetName>Summary</DataSetName>
             <SortExpressions>
               <SortExpression>
                 <Value>=Fields!Instance.Value</Value>
@@ -973,7 +1077,7 @@ Fields!FileFreeSpaceStatus.Value=4,"Green")</BackgroundColor>
             </SortExpressions>
             <Top>0.43in</Top>
             <Height>0.83625in</Height>
-            <Width>10.35833in</Width>
+            <Width>11.35833in</Width>
             <ZIndex>1</ZIndex>
             <Style />
           </Tablix>
@@ -1002,6 +1106,14 @@ Fields!FileFreeSpaceStatus.Value=4,"Green")</BackgroundColor>
           </Subreport>
           <Subreport Name="LogShipping">
             <ReportName>LogShipping</ReportName>
+            <Parameters>
+              <Parameter Name="FilterLevel">
+                <Value>2</Value>
+              </Parameter>
+              <Parameter Name="InstanceIDs">
+                <Value>=Parameters!InstanceIDs.Value</Value>
+              </Parameter>
+            </Parameters>
             <Top>4.21403in</Top>
             <Height>0.66667in</Height>
             <Width>11.32292in</Width>
@@ -1031,7 +1143,15 @@ Fields!FileFreeSpaceStatus.Value=4,"Green")</BackgroundColor>
           </Subreport>
           <Subreport Name="Files">
             <ReportName>Files</ReportName>
-            <Top>5.02653in</Top>
+            <Parameters>
+              <Parameter Name="InstanceIDs">
+                <Value>=Parameters!InstanceIDs.Value</Value>
+              </Parameter>
+              <Parameter Name="FilterLevel">
+                <Value>2</Value>
+              </Parameter>
+            </Parameters>
+            <Top>5.8807in</Top>
             <Height>0.84375in</Height>
             <Width>11.32292in</Width>
             <ZIndex>5</ZIndex>
@@ -1058,11 +1178,31 @@ Fields!FileFreeSpaceStatus.Value=4,"Green")</BackgroundColor>
               </Border>
             </Style>
           </Subreport>
+          <Subreport Name="Subreport1">
+            <ReportName>AgentJobs</ReportName>
+            <Parameters>
+              <Parameter Name="InstanceIDs">
+                <Value>=Parameters!InstanceIDs.Value</Value>
+              </Parameter>
+              <Parameter Name="FilterLevel">
+                <Value>2</Value>
+              </Parameter>
+            </Parameters>
+            <Top>4.95014in</Top>
+            <Height>0.81667in</Height>
+            <Width>11.32292in</Width>
+            <ZIndex>7</ZIndex>
+            <Style>
+              <Border>
+                <Style>None</Style>
+              </Border>
+            </Style>
+          </Subreport>
         </ReportItems>
-        <Height>6.28in</Height>
+        <Height>6.72445in</Height>
         <Style />
       </Body>
-      <Width>11.32292in</Width>
+      <Width>11.35833in</Width>
       <Page>
         <InteractiveHeight>200in</InteractiveHeight>
         <InteractiveWidth>8.5in</InteractiveWidth>
@@ -1108,6 +1248,11 @@ Fields!FileFreeSpaceStatus.Value=4,"Green")</BackgroundColor>
         </DataSetReference>
       </ValidValues>
     </ReportParameter>
+    <ReportParameter Name="InstanceName">
+      <DataType>String</DataType>
+      <Nullable>true</Nullable>
+      <Prompt>Instance Name</Prompt>
+    </ReportParameter>
     <ReportParameter Name="InstanceIDs">
       <DataType>String</DataType>
       <DefaultValue>
@@ -1144,6 +1289,11 @@ Fields!FileFreeSpaceStatus.Value=4,"Green")</BackgroundColor>
         </CellDefinition>
         <CellDefinition>
           <ColumnIndex>2</ColumnIndex>
+          <RowIndex>0</RowIndex>
+          <ParameterName>InstanceName</ParameterName>
+        </CellDefinition>
+        <CellDefinition>
+          <ColumnIndex>3</ColumnIndex>
           <RowIndex>0</RowIndex>
           <ParameterName>InstanceIDs</ParameterName>
         </CellDefinition>
